<resources>
    <string name="app_name">Cuisine Catalog</string>
    <string name="admin_email">rtbfletch@outlook.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about_text2">"The Cuisine Catalog is inspired by family, because that is what brings us together to even get the chance to enjoy food. Cook for your family, your friends, a stranger? Enjoy the process, the discipline, the art, and learn something new! Then eat up enjoy, and do it all over!"</string>
    <string name="about_text">"Street art lomo cred you probably haven't heard of them VHS taxidermy palo santo selvage migas photo booth. Humblebrag occupy tumeric, authentic hashtag chillwave thundercats tilde etsy franzen. Slow-carb offal brunch tumblr chartreuse neutra."</string>
    <string name="see_the_catalog_button">See the Catalog!</string>
    <string name="current_cuisines">Current Cuisines</string>
    <string name="recipeName">Recipe Name</string>
    <string name="recipeUrl">Click here for the full recipe!</string>
    <string name="recipeCourse">Course:</string>
    <string name="calories">Calories:</string>
    <string name="directions">Directions:</string>
    <string name="recipeImgDesc">Image of finished recipe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_recipe_search">enter recipe search terms</string>
    <string name="search_edamam_first">Search The Edamam API</string>
    <string name="search_edamam">Search Edamam!</string>
    <string name="nutritional_info">Nutritional Info:</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account">Need an account? Sign up here!</string>
    <string name="have_account">Already have an account? Log in here!</string>
</resources>
