<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.recipesandroid.ui.RecipeDetailFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/recipeImageView"
            android:contentDescription="@string/hello_blank_fragment"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/recipeNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/recipeName"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/saveRecipeButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="20dp">


                <TextView
                    android:id="@+id/ingredientsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_list_white_24dp"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/ingredients"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/directionsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_subject_white_24dp"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/recipeUrl"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/saveRecipeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorAccent"
                android:text="Save Recipe"
                android:textColor="@color/colorTextIcons"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>


